# neuromind

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  client_example.py  minimal_server.py  pyproject.toml  server.py  setup_check.py  start_server.py
data/personas/: coder.md  logician.md  neuromind.md  roaster.md  teacher.md
neuromind/: api_client.py  config.py  server.py  stream_processor.py  thread_manager.py  ui_manager.py
